--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,9 @@ fabric-language-kotlin = '1.13.1+kotlin.2.1.10'
 fabric-loader = '0.16.10'
 fabric-loom = '1.9.2'
 
+# Jackson
+jackson = '2.18.3'
+
 # Java
 java = '21'
 
@@ -28,6 +31,9 @@ yarn = '1.21.4+build.8'
 fabric-api = {group = 'net.fabricmc.fabric-api', name = 'fabric-api', version.ref = 'fabric-api'}
 fabric-language-kotlin = {group = 'net.fabricmc', name = 'fabric-language-kotlin', version.ref = 'fabric-language-kotlin'}
 fabric-loader = {group = 'net.fabricmc', name = 'fabric-loader', version.ref = 'fabric-loader'}
+
+# Jackson
+jackson-dataformat-toml = {group = 'com.fasterxml.jackson.dataformat', name = 'jackson-dataformat-toml', version.ref = 'jackson'}
 
 # Minecraft
 minecraft = {group = 'com.mojang', name = 'minecraft', version.ref = 'minecraft'}
