--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ fabric-api = '0.117.0+1.21.4'
 fabric-language-kotlin = '1.13.1+kotlin.2.1.10'
 fabric-loader = '0.16.10'
 fabric-loom = '1.9.2'
+fabric-permissions-api = '0.3.3'
 
 # Jackson
 jackson = '2.18.3'
@@ -31,6 +32,7 @@ yarn = '1.21.4+build.8'
 fabric-api = {group = 'net.fabricmc.fabric-api', name = 'fabric-api', version.ref = 'fabric-api'}
 fabric-language-kotlin = {group = 'net.fabricmc', name = 'fabric-language-kotlin', version.ref = 'fabric-language-kotlin'}
 fabric-loader = {group = 'net.fabricmc', name = 'fabric-loader', version.ref = 'fabric-loader'}
+fabric-permissions-api = {group = 'me.lucko', name = 'fabric-permissions-api', version.ref = 'fabric-permissions-api'}
 
 # Jackson
 jackson-dataformat-toml = {group = 'com.fasterxml.jackson.dataformat', name = 'jackson-dataformat-toml', version.ref = 'jackson'}
