--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ kotlin = '2.1.10'
 minecraft = '1.21.4'
 
 # Project
-project = '1.0.0'
+project = '1.0.1-SNAPSHOT'
 
 # Yarn
 yarn = '1.21.4+build.8'
