--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,13 +3,15 @@
 # Fabric
 # check these on https://modmuss50.me/fabric.html
 fabric-api = '0.117.0+1.21.4'
-fabric-language-kotlin = '1.13.1+kotlin.2.1.10'
 fabric-loader = '0.16.10'
 fabric-loom = '1.9.2'
 fabric-permissions-api = '0.3.3'
 
 # Jackson
 jackson = '2.18.3'
+
+# Jakarta
+jakarta = '3.0.0'
 
 # Java
 java = '21'
@@ -30,7 +32,6 @@ yarn = '1.21.4+build.8'
 
 # Fabric
 fabric-api = {group = 'net.fabricmc.fabric-api', name = 'fabric-api', version.ref = 'fabric-api'}
-fabric-language-kotlin = {group = 'net.fabricmc', name = 'fabric-language-kotlin', version.ref = 'fabric-language-kotlin'}
 fabric-loader = {group = 'net.fabricmc', name = 'fabric-loader', version.ref = 'fabric-loader'}
 fabric-permissions-api = {group = 'me.lucko', name = 'fabric-permissions-api', version.ref = 'fabric-permissions-api'}
 
@@ -40,6 +41,9 @@ jackson-bom = {group = 'com.fasterxml.jackson', name = 'jackson-bom', version.re
 jackson-core = {group = 'com.fasterxml.jackson.core', name = 'jackson-core', version.ref = 'jackson'}
 jackson-databind = {group = 'com.fasterxml.jackson.core', name = 'jackson-databind', version.ref = 'jackson'}
 jackson-dataformat-toml = {group = 'com.fasterxml.jackson.dataformat', name = 'jackson-dataformat-toml', version.ref = 'jackson'}
+
+# Jakarta
+jakarta-annotation-api = {group = 'jakarta.annotation', name = 'jakarta.annotation-api', version.ref = 'jakarta'}
 
 # Minecraft
 minecraft = {group = 'com.mojang', name = 'minecraft', version.ref = 'minecraft'}
