--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,6 +62,7 @@ kotlin-jvm = {id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin'}
 [bundles]
 
 included = [
+    'fabric-permissions-api',
     'jackson-annotations',
     'jackson-bom',
     'jackson-core',
