--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ kotlin = '2.1.10'
 minecraft = '1.21.5'
 
 # Project
-project = '1.0.3-SNAPSHOT'
+project = '1.0.3-rc0'
 
 # Yarn
 yarn = '1.21.5+build.1'
