--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ kotlin = '2.2.0'
 minecraft = '1.21.8'
 
 # Project
-project = '1.0.6'
+project = '1.0.7-SNAPSHOT'
 
 # Yarn
 yarn = '1.21.8+build.1'
